- Fixed a notice which can get displayed if GravityView is installed.